--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,13 +53,23 @@ dependencies {
     implementation "io.insert-koin:koin-android:$koin_version"
     // Koin main features for Android (Scope,ViewModel ...)
     implementation "io.insert-koin:koin-android:$koin_version"
-// Koin Java Compatibility
+    // Koin Java Compatibility
     implementation "io.insert-koin:koin-android-compat:$koin_version"
-// Koin for Jetpack WorkManager
+    // Koin for Jetpack WorkManager
     implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
-// Koin for Jetpack Compose
+    // Koin for Jetpack Compose
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
 
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.picasso:picasso:2.5.0'
+
+    //Logging-Interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 }
