--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.onshop" >
+    package="com.example.onshop">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -12,15 +12,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_custom_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-
-        android:theme="@style/Theme.OnShop" >
+        android:theme="@style/Theme.OnShop"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".activities.InfoProdutoActivity"
+            android:exported="true" />
         <activity
             android:name=".activities.HomeActivity"
             android:exported="true" />
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
