--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
     id 'com.google.gms.google-services'
 }
 
@@ -70,6 +71,10 @@ dependencies {
 
     //Logging-Interceptor
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
-
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+
+    //room
+    def room_version = "2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
