--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.OnShop"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".activities.FluxoPagamentoActivity"
+            android:exported="true" />
+        <activity
             android:name=".activities.PagamentoActivity"
             android:exported="true" />
         <activity
